--- a/build.properties
+++ b/build.properties
@@ -28,7 +28,7 @@ judas_version=${judas_major_version}.${judas_minor_version}.${judas_sub_minor_ve
 #
 jfreechart_major_version=1
 jfreechart_minor_version=0
-jfreechart_sub_minor_version=17
+jfreechart_sub_minor_version=18
 jfreechart_version=${jfreechart_major_version}.${jfreechart_minor_version}.${jfreechart_sub_minor_version}
 jcommon_major_version=1
 jcommon_minor_version=0
@@ -191,7 +191,7 @@ oai4j_prefix=oai4j-${oai4j_version}
 #
 #
 #
-jfreechart=${jfreechart_prefix}.tar.gz
+jfreechart=${jfreechart_prefix}.zip
 jdom=${jdom_prefix}.zip
 festSwing=${festSwing_prefix}.zip
 geotools=${geotools_prefix}-bin.zip
