--- a/build.properties
+++ b/build.properties
@@ -5,8 +5,8 @@ ftp_server=http://ftp.jaist.ac.jp
 ftp_server2=http://search.maven.org
 ftp_server3=http://dl.bintray.com
 ftp_server4=http://downloads.typesafe.com
-judas.HOME=${env.HOME}/Judas
-tmp=/tmp/Judas
+judas.HOME=${env.HOME}/JudasFX
+tmp=/tmp/JudasFX
 install_dir=${env.HOME}/Documents
 env_set_file=${env.HOME}/.bash_profile
 #
@@ -32,7 +32,7 @@ jfreechart_sub_minor_version=18
 jfreechart_version=${jfreechart_major_version}.${jfreechart_minor_version}.${jfreechart_sub_minor_version}
 jcommon_major_version=1
 jcommon_minor_version=0
-jcommon_sub_minor_version=21
+jcommon_sub_minor_version=22
 jcommon_version=${jcommon_major_version}.${jcommon_minor_version}.${jcommon_sub_minor_version}
 jdom_major_version=2
 jdom_minor_version=0
