--- a/build.properties
+++ b/build.properties
@@ -1,11 +1,11 @@
 #
-# build.properties for JudasWing
+# build.properties for JudasFX
 #
 ftp_server=http://ftp.jaist.ac.jp
 ftp_server2=http://search.maven.org
 ftp_server3=http://dl.bintray.com
 ftp_server4=http://downloads.typesafe.com
-judas.HOME=${env.HOME}/JudasFX
+judasfx.HOME=${env.HOME}/JudasFX
 tmp=/tmp/JudasFX
 install_dir=${env.HOME}/Documents
 env_set_file=${env.HOME}/.bash_profile
@@ -13,16 +13,16 @@ env_set_file=${env.HOME}/.bash_profile
 #
 #
 bin.dir=bin
-lib.dir=${judas.HOME}/lib
+lib.dir=${judasfx.HOME}/lib
 ext.dir=${lib.dir}/external
 javadoc.dir=docs
 #
 #
 #
-judas_major_version=0
-judas_minor_version=0
-judas_sub_minor_version=1
-judas_version=${judas_major_version}.${judas_minor_version}.${judas_sub_minor_version}
+judasfx_major_version=0
+judasfx_minor_version=0
+judasfx_sub_minor_version=1
+judasfx_version=${judasfx_major_version}.${judasfx_minor_version}.${judasfx_sub_minor_version}
 #
 #
 #
@@ -38,11 +38,8 @@ jdom_major_version=2
 jdom_minor_version=0
 jdom_sub_minor_version=5
 jdom_version=${jdom_major_version}.${jdom_minor_version}.${jdom_sub_minor_version}
-festSwing_major_version=1
-festSwing_minor_version=2
-festSwing_version=${festSwing_major_version}.${festSwing_minor_version}
-geotools_major_version=10
-geotools_minor_version=4
+geotools_major_version=11
+geotools_minor_version=1
 geotools_version=${geotools_major_version}.${geotools_minor_version}
 jythonconsole_major_version=0
 jythonconsole_minor_version=0
@@ -51,17 +48,13 @@ jythonconsole_version=${jythonconsole_major_version}.${jythonconsole_minor_versi
 jyconsole_major_version=1
 jyconsole_minor_version=4
 jyconsole_version=${jyconsole_major_version}.${jyconsole_minor_version}
-swingx_major_version=1
-swingx_minor_version=6
-swingx_sub_minor_version=4
-swingx_version=${swingx_major_version}.${swingx_minor_version}.${swingx_sub_minor_version}
 java_getopt_major_version=1
 java_getopt_minor_version=0
 java_getopt_sub_minor_version=13
 java_getopt_version=${java_getopt_major_version}.${java_getopt_minor_version}.${java_getopt_sub_minor_version}
 commons_math_major_version=3
 commons_math_minor_version=3
-commons_math_sub_minor_version=2
+commons_math_sub_minor_version=3
 commons_math_version=${commons_math_major_version}-${commons_math_minor_version}.${commons_math_sub_minor_version}
 commons_validator_major_version=1
 commons_validator_minor_version=4
@@ -73,17 +66,21 @@ jai_major_version=1
 jai_minor_version=1
 jai_sub_minor_version=3
 jai_version=${jai_major_version}_${jai_minor_version}_${jai_sub_minor_version}
-qgis_major_version=1
-qgis_minor_version=8
+qgis_major_version=2
+qgis_minor_version=4
 qgis_sub_minor_version=0
 qgis_version=${qgis_major_version}.${qgis_minor_version}.${qgis_sub_minor_version}
-cmake_major_version=2
-cmake_minor_version=8
-cmake_sub_minor_version=12
-cmake_sub_sub_minor_version=1
+#cmake_major_version=2
+#cmake_minor_version=8
+#cmake_sub_minor_version=12
+#cmake_sub_sub_minor_version=1
+cmake_major_version=3
+cmake_minor_version=0
+cmake_sub_minor_version=0
+cmake_version=${cmake_major_version}.${cmake_minor_version}.${cmake_sub_minor_version}
 grass_major_version=6
 grass_minor_version=4
-grass_sub_minor_version=3
+grass_sub_minor_version=4
 grass_version=${grass_major_version}.${grass_minor_version}.${grass_sub_minor_version}
 proj_major_version=4
 proj_minor_version=8
@@ -108,9 +105,6 @@ cdfjava_major_version=3
 cdfjava_minor_version=5
 cdfjava_sub_minor_version=0
 cdfjava_version=${cdfjava_major_version}${cdfjava_minor_version}_${cdfjava_sub_minor_version}
-swexpl-eclipse_major_version=1
-swexpl-eclipse_minor_version=6
-swexpl-eclipse_version=${swexpl-eclipse_major_version}_${swexpl-eclipse_minor_version}
 netcdf_major_version=4
 netcdf_minor_version=3
 netcdf_version=${netcdf_major_version}.${netcdf_minor_version}
@@ -128,7 +122,7 @@ scala_sub_minor_version=0
 scala_version=${scala_major_version}.${scala_minor_version}.${scala_sub_minor_version}
 jruby_major_version=1
 jruby_minor_version=7
-jruby_sub_minor_version=12
+jruby_sub_minor_version=13
 jruby_version=${jruby_major_version}.${jruby_minor_version}.${jruby_sub_minor_version}
 jeditor_major_version=0
 jeditor_minor_version=4
@@ -154,9 +148,7 @@ jcommon_prefix=jcommon-${jcommon_version}
 jdom_prefix=jdom-${jdom_version}
 geotools_prefix=geotools-${geotools_version}
 jyconsole_prefix=JyConsole-${jyconsole_version}-bin
-swingx_prefix=swingx-all-${swingx_version}
 java_getopt_prefix=java-getopt-${java_getopt_version}
-festSwing_prefix=fest-swing-${festSwing_version}
 commons_math_sub_prefix=commons-math${commons_math_version}
 commons_math_prefix=${commons_math_sub_prefix}-bin
 commons_validator_sub_prefix=commons-validator-${commons_validator_version}
@@ -166,7 +158,8 @@ eclipse_prefix=eclipse-java-${eclipse_code_name}-${eclipse_version}-linux-gtk-x8
 jai_prefix=jai-${jai_version}-lib
 qgis_prefix=qgis-${qgis_version}
 qgis_sample_data_prefix=qgis_sample_data
-cmake_prefix=cmake-${cmake_major_version}.${cmake_minor_version}.${cmake_sub_minor_version}.${cmake_sub_sub_minor_version}
+#cmake_prefix=cmake-${cmake_major_version}.${cmake_minor_version}.${cmake_sub_minor_version}.${cmake_sub_sub_minor_version}
+cmake_prefix=cmake-${cmake_version}
 grass_prefix=grass-${grass_version}
 proj_prefix=proj-${proj_version}
 gdal_prefix=gdal${gdal_version}
@@ -177,7 +170,6 @@ hdf-java_prefix_macosx=hdf-java-${hdf-java_version}-macosx
 hdf-java_prefix_win32=hdf-java-${hdf-java_version}-win32
 hdf-java_prefix_win64=hdf-java-${hdf-java_version}-win64
 cdfjava_prefix=cdfjava
-swexpl-eclipse_prefix=swexpl-eclipse
 netcdf_prefix=netcdfAll-${netcdf_version}
 fits_prefix=fits
 jython_prefix=jython-installer-${jython_version}
@@ -193,11 +185,9 @@ oai4j_prefix=oai4j-${oai4j_version}
 #
 jfreechart=${jfreechart_prefix}.zip
 jdom=${jdom_prefix}.zip
-festSwing=${festSwing_prefix}.zip
 geotools=${geotools_prefix}-bin.zip
 jythonconsole=jythonconsole-${jythonconsole_version}.zip
 jyconsole=${jyconsole_prefix}.zip
-swingx=${swingx_prefix}.jar
 java_getopt=${java_getopt_prefix}.jar
 commons_math=${commons_math_prefix}.zip   
 commons_validator=${commons_validator_prefix}.zip
@@ -216,7 +206,6 @@ hdf-java_macosx=${hdf-java_prefix_macosx}.tar.gz
 hdf-java_win32=${hdf-java_prefix_win32}.zip
 hdf-java_win64=${hdf-java_prefix_win64}.zip
 cdfjava=${cdfjava_prefix}.jar
-swexpl-eclipse=${swexpl-eclipse_prefix}.zip
 netcdf=${netcdf_prefix}.jar
 fits=${fits_prefix}.jar
 jython=${jython_prefix}.jar
@@ -247,7 +236,6 @@ gt_render.jar=gt-render-${geotools_version}.jar
 gt_metadata.jar=gt-metadata-${geotools_version}.jar
 gt_opengis.jar=gt-opengis-${geotools_version}.jar
 jts.jar=jts-1.13.jar
-swingx.jar=swingx-all-${swingx_version}.jar
 jai_core.jar=jai_core.jar
 jai_codec.jar=jai_codec.jar
 junit.jar=${junit_prefix}.jar
@@ -257,11 +245,9 @@ oai4j.jar=${oai4j_prefix}.jar
 #
 src_jfreechart=${ftp_server}/pub/sourceforge/j/jf/jfreechart/1.%20JFreeChart/${jfreechart_version}/${jfreechart}
 src_jdom=http://www.jdom.org/dist/binary/${jdom}
-src_festSwing=http://fest.googlecode.com/files/${festSwing}
 src_geotools=${ftp_server}/pub/sourceforge/g/ge/geotools/GeoTools%20${geotools_major_version}%20Releases/${geotools_version}/${geotools}
 src_jythonconsole=http://jythonconsole.googlecode.com/files/${jythonconsole}
 src_jyconsole=http://dev.artenum.com/projects/jyconsole/download/bin-20070826?action=download&nodecorator
-src_swingx=https://java.net/downloads/swingx/releases/${swingx}
 src_java_getopt=http://jprefctl.googlecode.com/files/${java_getopt}
 src_commons_math=${ftp_server}/pub/apache/commons/math/binaries/${commons_math}
 src_commons_validator=${ftp_server}/pub/apache/commons/validator/binaries/${commons_validator}
@@ -281,7 +267,6 @@ src_hdf-java_macosx=http://www.hdfgroup.org/ftp/HDF5/hdf-java/current/bin/${hdf-
 src_hdf-java_win32=http://www.hdfgroup.org/ftp/HDF5/hdf-java/current/bin/${hdf-java_win32}
 src_hdf-java_win64=http://www.hdfgroup.org/ftp/HDF5/hdf-java/current/bin/${hdf-java_win64}
 src_cdfjava=http://cdaweb.gsfc.nasa.gov/pub/software/cdf/dist/cdf${cdfjava_version}/linux/${cdfjava}
-src_swexpl-eclipse=http://www.swingexplorer.com/download?file=${swexpl-eclipse}&version=${swexpl-eclipse_version}
 src_netcdf=ftp://ftp.unidata.ucar.edu/pub/netcdf-java/v${netcdf_version}/${netcdf}
 src_fits=http://heasarc.gsfc.nasa.gov/docs/heasarc/fits/java/v1.0/v1.11.0/${fits}
 #src_jython=${ftp_server}/pub/sourceforge/j/jy/jython/jython/${jython_version}/${jython}
@@ -298,11 +283,9 @@ src_oai4j=http://sourceforge.net/projects/oai4j-client/files/oai4j-client/OAI4J%
 #
 dst_jfreechart=${tmp}/${jfreechart}
 dst_jdom=${tmp}/${jdom}
-dst_festSwing=${tmp}/${festSwing}
 dst_geotools=${tmp}/${geotools}
 dst_jythonconsole=${tmp}/${jythonconsole}
 dst_jyconsole=${tmp}/${jyconsole}
-dst_swingx=${tmp}/${swingx}
 dst_java_getopt=${tmp}/${java_getopt}
 dst_commons_math=${tmp}/${commons_math}
 dst_commons_validator=${tmp}/${commons_validator}
@@ -321,7 +304,6 @@ dst_hdf-java_macosx=${tmp}/${hdf-java_macosx}
 dst_hdf-java_win32=${tmp}/${hdf-java_win32}
 dst_hdf-java_win64=${tmp}/${hdf-java_win64}
 dst_cdfjava=${tmp}/${cdfjava}
-dst_swexpl-eclipse=${tmp}/${swexpl-eclipse}
 dst_netcdf=${tmp}/${netcdf}
 dst_fits=${tmp}/${fits}
 dst_jython=${tmp}/${jython}
