--- a/build.properties
+++ b/build.properties
@@ -44,6 +44,8 @@ geotools_version=${geotools_major_version}.${geotools_minor_version}
 jyconsole_major_version=1
 jyconsole_minor_version=4
 jyconsole_version=${jyconsole_major_version}.${jyconsole_minor_version}
+jyni_major_version=2
+jyni_minor_version=2
 java_getopt_major_version=1
 java_getopt_minor_version=0
 java_getopt_sub_minor_version=13
