--- a/build.properties
+++ b/build.properties
@@ -12,6 +12,7 @@ ftp_server8=http://central.maven.org
 ftp_server9=http://www.naturalearthdata.com
 ftp_server10=http://projectlombok.org
 ftp_server11=http://www.java2s.com
+ftp_server12=http://github.com
 judasfx.HOME=${env.HOME}/JudasFX
 tmp=/tmp/JudasFX
 install_dir=${env.HOME}/Documents
@@ -38,7 +39,7 @@ jdom_major_version=2
 jdom_minor_version=0
 jdom_sub_minor_version=5
 jdom_version=${jdom_major_version}.${jdom_minor_version}.${jdom_sub_minor_version}
-geotools_major_version=11
+geotools_major_version=12
 geotools_minor_version=1
 geotools_version=${geotools_major_version}.${geotools_minor_version}
 jyconsole_major_version=1
@@ -46,6 +47,7 @@ jyconsole_minor_version=4
 jyconsole_version=${jyconsole_major_version}.${jyconsole_minor_version}
 jyni_major_version=2
 jyni_minor_version=2
+jyni_version=${jyni_major_version).${jyni_minor_version}
 java_getopt_major_version=1
 java_getopt_minor_version=0
 java_getopt_sub_minor_version=13
@@ -169,6 +171,7 @@ javacv_version=${javacv_major_version}.${javacv_minor_version}
 jdom_prefix=jdom-${jdom_version}
 geotools_prefix=geotools-${geotools_version}
 jyconsole_prefix=JyConsole-${jyconsole_version}-bin
+jyni_prefix=JyNI-2.7-alpha-${jyni_version}
 java_getopt_prefix=java-getopt-${java_getopt_version}
 commons_math_sub_prefix=commons-math${commons_math_version}
 commons_math_prefix=${commons_math_sub_prefix}-bin
@@ -220,6 +223,7 @@ javacv_prefix=javacv-${javacv_version}-bin
 jdom=${jdom_prefix}.zip
 geotools=${geotools_prefix}-bin.zip
 jyconsole=${jyconsole_prefix}.zip
+jyni=${jyni_prefix}.jar
 java_getopt=${java_getopt_prefix}.jar
 commons_math=${commons_math_prefix}.zip   
 commons_validator=${commons_validator_prefix}.zip
@@ -255,6 +259,7 @@ cdfjava.jar=${cdfjava_prefix}.jar
 fits.jar=${fits_prefix}.jar
 netcdf.jar=${netcdf_prefix}.jar
 jyconsole.jar=JyConsole.jar
+jyni.jar=${jyni_prefix}.jar
 jdom.jar=${jdom_prefix}.jar
 gt_api.jar=gt-api-${geotools_version}.jar
 gt_main.jar=gt-main-${geotools_version}.jar
@@ -291,6 +296,7 @@ lombok.jar=${lombok_prefix}.jar
 src_jdom=http://www.jdom.org/dist/binary/${jdom}
 src_geotools=${ftp_server}/pub/sourceforge/g/ge/geotools/GeoTools%20${geotools_major_version}%20Releases/${geotools_version}/${geotools}
 src_jyconsole=http://dev.artenum.com/projects/jyconsole/download/bin-20070826?action=download&nodecorator
+src_jyni=${ftp_server12}/Stewori/JyNI/releases/download/v2.7-alpha${jyni_version}/${jyni.jar}
 src_java_getopt=http://jprefctl.googlecode.com/files/${java_getopt}
 src_commons_math=${ftp_server}/pub/apache/commons/math/binaries/${commons_math}
 src_commons_validator=${ftp_server}/pub/apache/commons/validator/binaries/${commons_validator}
@@ -342,6 +348,7 @@ src_javacv=${ftp_server2}/remotecontent?filepath=org/bytedeco/javacv/${javacv_ve
 dst_jdom=${tmp}/${jdom}
 dst_geotools=${tmp}/${geotools}
 dst_jyconsole=${tmp}/${jyconsole}
+dst_jyni=${tmp}/${jyni.jar}
 dst_java_getopt=${tmp}/${java_getopt}
 dst_commons_math=${tmp}/${commons_math}
 dst_commons_validator=${tmp}/${commons_validator}
